# symposium

./: Cargo.toml  SESSION_SUMMARY.md
.github/workflows/: mdbook.yml
md/: SUMMARY.md  about.md  ecosystem-knowledge.md  rich-collaboration.md  rust-expertise.md
md/design/: components.md  ide_operations.md  implementation-overview.md  vscode-extension.md
md/design/vscode-extension/: implementation-status.md
setup/: Cargo.toml
setup/src/: main.rs
src/rust-crate-sources-proxy/: Cargo.toml
src/rust-crate-sources-proxy/src/: lib.rs
src/sacp-tee/: Cargo.toml
src/sacp-tee/src/: lib.rs
src/symposium-acp/: Cargo.toml
src/symposium-acp-agent/: CHANGELOG.md  Cargo.toml
src/symposium-acp-agent/src/: main.rs
src/symposium-acp-proxy/: CHANGELOG.md  Cargo.toml
src/symposium-acp/src/: lib.rs
src/symposium-benchmark/: Cargo.toml
src/symposium-benchmark/src/: main.rs
src/symposium-crate-sources-proxy/: Cargo.toml
src/symposium-crate-sources-proxy/src/: crate_research_mcp.rs  crate_sources_mcp.rs  lib.rs  main.rs  research_agent.rs  sub_agent.rs
src/symposium-crate-sources-proxy/tests/: basic_integration.rs
src/symposium-eg/: Cargo.toml
src/symposium-eg/src/: error.rs  lib.rs
src/symposium-eg/src/rust/: cache.rs  extraction.rs  mod.rs  search.rs  version.rs
src/symposium-ferris/src/: lib.rs
src/symposium-math/: Cargo.toml
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: acpAgentActor.ts  chatViewProvider.ts  extension.ts  settingsViewProvider.ts  symposium-webview.ts  workspaceFileIndex.ts
(+3 files in other folders)
